--- a/css/styles.css
+++ b/css/styles.css
@@ -32,12 +32,7 @@ h2 {
 	color: #555;
 	text-align: center;
 	font-family: 'Lobster', cursive;
-	padding: 10px 10px 15px;
-	margin: 15px 80px 0;
-	background: #aaa;
-	border-radius: 20px 20px 0px 0px;
-	-webkit-border-radius: 20px 20px 0px 0px;
-	-moz-border-radius: 20px 20px 0px 0px;
+	margin: 0 auto 20px;
 }
 
 p {
@@ -122,7 +117,7 @@ span {
 	flex-wrap: wrap;
 	justify-content: space-around;
 	background-color: #fff;
-	padding: 25px 3%;
+	padding: 10px 3%;
 	margin: 0;
 	line-height: 2em;
 }
@@ -163,7 +158,7 @@ span {
 .hi-there {
 	font-size: 1.6em;
 	background: #e6e6e6;
-	padding-bottom: 5px;
+	margin-top: 20px;
 }
 
 .about-paragraph {
@@ -184,6 +179,7 @@ span {
 	max-width: 1200px;
 	display: block;
 	margin: 0 auto;
+	padding: 15px 0 40px;
 }
 
 #work {
@@ -196,51 +192,59 @@ span {
 
 #work p {
 	margin: 0 15px;
-	padding: 10px;
-	background: rgba(250,250,250,.75);
-	border-radius: 0px 0px 5px 5px;
-	-webkit-border-radius: 0px 0px 5px 5px;
-	-moz-border-radius: 0px 0px 5px 5px;
+	padding-top: 15px;
 	text-align: center;
 }
+#work {
+	margin: 0;
+}
 
-.graphic-h2,
-.web-h2 {
-	box-shadow: 0 2px 5px #aaa;
-	-webkit-box-shadow: 0 2px 5px #aaa;
-	-moz-box-shadow: 0 2px 5px #aaa;
-	max-width: 600px;
-	margin: 30px auto 0;
+.wrap {
+	background: rgba(250,250,250,.75);
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	padding: 20px 0 15px;
+	margin-left: 5%;
+	margin-right: 5%;
+	margin-bottom: 20px;
 }
 
 #lightGallery,
 #web-design {
 	background: #aaa;
+	border-radius: 20px;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	padding-top: 15px;
 }
 
-#work,
-#lightGallery,
 #web-design {
-	margin: 0;
-	padding-bottom: 20px;
+	padding-bottom: 15px;
+}
+
+#lightGallery {
+	margin-bottom: 40px;
 }
 
 #lightGallery img,
 #web-design img {
-	width: 100%;
-	height: 100%;
-	box-shadow: 0 0 6px #777;
-	-webkit-box-shadow: 0 0 6px #777;
-	-moz-box-shadow: 0 0 6px #777;
+	width: 40%;
+	height: 40%;
+	margin-bottom: 6.25%;
+	margin-left: 6.25%;
+	display: inline-block;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
 }
 
-#lightGallery img:not(.first),
-#web-design img:not(.first) {
-	margin: 30px 0 -5px;
-}
-
-.first {
-	margin-bottom: -5px;
+#web-design img {
+	display: block;
+	margin: 0 auto;
+	box-shadow: 0 2px 5px #aaa;
+	-webkit-box-shadow: 0 2px 5px #aaa;
+	-moz-box-shadow: 0 2px 5px #aaa;
 }
 
 
@@ -349,7 +353,7 @@ h2 {
   	width: 175px;
   	display: block;
   	float: right;
-  	margin-left: 8px;
+  	margin: 8px 0 8px 8px;
 }
 
 .hi-there {
@@ -370,14 +374,6 @@ h2 {
 
 /********************* WORK MEDIA *********************/
 
-#lightGallery {
-	text-align: center;
-}
-
-#work {
-	padding-bottom: 40px;
-}
-
 #work p {
 	margin: 0;
 	padding: 25px 20px;
@@ -388,9 +384,15 @@ h2 {
 	-moz-border-radius: 0;
 }
 
+#lightGallery {
+	text-align: center;
+}
+
+
 #lightGallery,
 #web-design {
-	padding: 20px 0 10px;
+	padding: 10px 0 30px;
+	text-align: center;
 }
 
 #lightGallery img,
@@ -402,23 +404,22 @@ h2 {
 
 #lightGallery img,
 .wrap {
-	width: 33%;
-	height: 33%;
-}
-
-#lightGallery img:not(.first),
-#web-design img:not(.first) {
+	width: 30%;
+	height: 30%;
 	margin: 0;
 }
 
-.first {
-	margin-bottom: 0;
+#web-design img {
+	height: 100%;
+	width: 100%;
+
 }
 
 .wrap {
 	position: relative;
 	display: inline-block;
-	margin: 0 auto;
+	background: none;
+	padding: 0;
 }
 
 .imgDesc {
