--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ h2 {
 	color: #555;
 	text-align: center;
 	font-family: 'Lobster', cursive;
-	margin: 0 auto 20px;
+	margin: 0 auto 15px;
 }
 
 p {
@@ -195,6 +195,7 @@ span {
 	padding-top: 15px;
 	text-align: center;
 }
+
 #work {
 	margin: 0;
 }
@@ -216,7 +217,7 @@ span {
 	border-radius: 20px;
 	-webkit-border-radius: 20px;
 	-moz-border-radius: 20px;
-	padding-top: 15px;
+	padding-top: 30px;
 }
 
 #web-design {
@@ -312,7 +313,7 @@ div {
 }
 
 h2 {
-	font-size: 1.5em;
+	font-size: 1.7em;
 	padding-top: 15px;
 	padding-bottom: 0;
 	margin-right: 200px;
@@ -391,7 +392,7 @@ h2 {
 
 #lightGallery,
 #web-design {
-	padding: 10px 0 30px;
+	padding: 20px 0;
 	text-align: center;
 }
 
