--- a/css/styles.css
+++ b/css/styles.css
@@ -28,16 +28,15 @@ header {
 }
 
 h2 {
-	font-size: 1.3em;
+	font-size: 1.6em;
 	color: #555;
 	text-align: center;
-	font-family: 'Lobster', cursive;
-	margin: 0 auto 15px;
+	margin: 0;
 }
 
 p {
 	font-size: 1.0em;
-	color: #333;
+	color: #555;
 	line-height: 1.5em;
 	margin: 10px 0 0;
 }
@@ -156,9 +155,10 @@ span {
 }
 
 .hi-there {
-	font-size: 1.6em;
+	font-family: 'Shadows Into Light', cursive;
+	font-weight: 800;
 	background: #e6e6e6;
-	margin-top: 20px;
+	margin: 30px 0 0;
 }
 
 .about-paragraph {
@@ -175,15 +175,12 @@ span {
 
 /********************* WORK *********************/
 
+
 .wrapper {
 	max-width: 1200px;
 	display: block;
 	margin: 0 auto;
 	padding: 15px 0 40px;
-}
-
-#work {
-	background: #e6e6e6;
 }
 
 .heading-work {
@@ -201,7 +198,7 @@ span {
 }
 
 .wrap {
-	background: rgba(250,250,250,.75);
+	background: rgba(264,264,264,.75);
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
@@ -211,9 +208,21 @@ span {
 	margin-bottom: 20px;
 }
 
+.h2-heading {
+	font-family: 'Anton', sans-serif;
+	font-size: 2em;
+	color: #555;
+	opacity: .3;
+	text-transform: uppercase;
+	margin-bottom: -5px;
+	margin-left: 10%;
+	text-align: left;
+
+}
+
 #lightGallery,
 #web-design {
-	background: #aaa;
+	background: #555;
 	border-radius: 20px;
 	-webkit-border-radius: 20px;
 	-moz-border-radius: 20px;
@@ -385,6 +394,12 @@ h2 {
 	-moz-border-radius: 0;
 }
 
+.h2-heading {
+	font-size: 3em;
+	padding-top: 0;
+	margin-bottom: -7px;
+}
+
 #lightGallery {
 	text-align: center;
 }
@@ -468,6 +483,11 @@ span {
 
 
 @media (min-width: 1024px) {
+
+
+.h2-heading {
+	margin-left: 160px;
+}
 
 #web-design,
 #lightGallery {
