--- a/css/styles.css
+++ b/css/styles.css
@@ -65,10 +65,6 @@ li {
 	font-size: 1.3em;
 }
 
-span {
-	color: #777;
-}
-
 label {
 	color: #999;
 	display: inline-block;
@@ -95,7 +91,7 @@ button {
 	text-align: center;
 	border-radius: 5px;
 		-webkit-border-radius: 0 2px 5px #aaa;
-	-moz-border-radius: 0 2px 5px #aaa;
+		-moz-border-radius: 0 2px 5px #aaa;
 	width: 80%;
 	margin: 25px auto;
 	border-style: none;
@@ -146,9 +142,9 @@ label {
 #work-anchor,
 #contact-anchor {
 	background-color: #564853;
-	box-shadow: 0px 2px 3px 1px #aaa; /*horiz offset, vertical offset, blur, spread*/
-		-webkit-box-shadow: 0px 2px 3px 1px #aaa;
-		-moz-box-shadow: 0px 2px 3px 1px #aaa;
+	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
+		-webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
+		-moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
 }
 
 
@@ -168,26 +164,32 @@ label {
 
 #nav-bkg {
 	background: url("Paper-bkg.jpg") center repeat;
+	height: 432px;
+	/*background: url("flower-lower-opacity.png") center no-repeat;*/
+	box-shadow: 0px 0px 45px 15px #ddd inset; /*horiz offset, vertical offset, blur, spread*/
+		-webkit-box-shadow: 0px 0px 45px 15px #bfbfbf inset;
+		-moz-box-shadow: 0px 0px 45px 15px #bfbfbf inset;
 }
 
 .main-nav {
 	border-top: 4px solid #49553f;
 	list-style: none;
 	line-height: 2em;
-	padding: 75px 0 0;
-	height: 432px;
-	background: url("flower-lower-opacity.png") center no-repeat;
-	box-shadow: 0px 0px 35px 15px #ddd inset; /*horiz offset, vertical offset, blur, spread*/
-		-webkit-box-shadow: 0px 0px 35px 15px #ddd inset;
-		-moz-box-shadow: 0px 0px 35px 15px #ddd inset;
+	padding: 65px 0 0;
 }
 
 .main-nav a {
 	color: #555;
 }
 
-.welcome {
+.welcome,
+.welcome2 {
 	display: none;
+}
+
+.arrow {
+	display: block;
+	margin: 75px auto 0;
 }
 
 
@@ -221,9 +223,9 @@ label {
 	border-radius: 20px 20px 0 0;
 		-webkit-border-radius: 20px 20px 0 0;
 		-moz-border-radius: 20px 20px 0 0;
-	box-shadow: 0px 2px 3px 1px #aaa; /*horiz offset, vertical offset, blur, spread*/
-		-webkit-box-shadow: 0px 2px 3px 1px #aaa;
-		-moz-box-shadow: 0px 2px 3px 1px #aaa;
+	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
+		-webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
+		-moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
 }
 
 .about-paragraph {
@@ -255,9 +257,9 @@ label {
 
 #web-design-head {
 	background-color: #564853;
-	box-shadow: 0px 2px 3px 1px #aaa; /*horiz offset, vertical offset, blur, spread*/
-		-webkit-box-shadow: 0px 2px 3px 1px #aaa;
-		-moz-box-shadow: 0px 2px 3px 1px #aaa;
+	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
+		-webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
+		-moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
 }
 
 #work p {
@@ -274,6 +276,10 @@ label {
 		-webkit-border-radius: 5px;
 		-moz-border-radius: 5px;
 	margin: 7% 7% 40px;
+}
+
+.wrap span {
+	color: #9ba197;
 }
 
 #lightGallery,
@@ -307,9 +313,9 @@ label {
 	width: 50%;
 	height: 50%;
 	margin: 0 auto;
-	box-shadow: 0 2px 3px #aaa;
-		-webkit-box-shadow: 0 2px 3px #aaa;
-		-moz-box-shadow: 0 2px 3px #aaa;
+	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
+		-webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
+		-moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
 }
 
 .imgDesc {
@@ -323,9 +329,9 @@ label {
 
 #contact-bkg {
 	background: url("Paper-bkg.jpg") center repeat;
-	box-shadow: 0px 0px 35px 15px #ddd inset; /*horiz offset, vertical offset, blur, spread*/
-		-webkit-box-shadow: 0px 0px 35px 15px #ddd inset;
-		-moz-box-shadow: 0px 0px 35px 15px #ddd inset;
+	box-shadow: 0px 0px 45px 15px #ddd inset; /*horiz offset, vertical offset, blur, spread*/
+		-webkit-box-shadow: 0px 0px 45px 15px #bfbfbf inset;
+		-moz-box-shadow: 0px 0px 45px 15px #bfbfbf inset;
 }
 
 #contact {
@@ -422,8 +428,10 @@ p {
 }
 
 fieldset {
-font-size: 1.25em;
-border-radius: 20px;
+	font-size: 1.0em;
+	border-radius: 20px;
+	max-width: 500px;
+	margin: 0 auto;
 }
 
 
@@ -434,6 +442,7 @@ border-radius: 20px;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
+	border-bottom: 4px solid #49553f;
 }
 
 .logo {
@@ -448,13 +457,23 @@ border-radius: 20px;
 	margin: 0 auto;
 }
 
+.welcome2 {
+	display: none;
+}
+
+#nav-bkg {
+	height: 1024px;
+	padding-top: 80px;
+	box-shadow: 0px 0px 45px 15px #ddd inset; /*horiz offset, vertical offset, blur, spread*/
+		-webkit-box-shadow: 0px 0px 45px 15px #bfbfbf inset;
+		-moz-box-shadow: 0px 0px 45px 15px #bfbfbf inset;
+}
+
 .main-nav {
-	padding-top: 40px;
-	height: 696px;
+	border: none;
+	box-shadow: none;
 	background: none;
-	box-shadow: 0px 0px 35px 20px #ddd inset; /*horiz offset, vertical offset, blur, spread*/
-		-webkit-box-shadow: 0px 0px 35px 20px #ddd inset;
-		-moz-box-shadow: 0px 0px 35px 20px #ddd inset;
+	padding: 40px 0;
 }
 
 .main-nav li {
@@ -464,12 +483,8 @@ border-radius: 20px;
 	width: 80px; /* if hover over a nav list item, it won't push the other list items left */
 }
 
-.main-nav a:hover:after {
-	cursor: pointer;
-	position: relative;
-	content: url("hover_image.png");
-	top: -15px;
-	width: 100%;
+.arrow {
+	margin-top: 275px;
 }
 
 
@@ -484,9 +499,9 @@ border-radius: 20px;
 #about-anchor {
 	background-color: #564853;
 	margin-bottom: 30px;
-	box-shadow: 0px 2px 3px 1px #aaa; /*horiz offset, vertical offset, blur, spread*/
-		-webkit-box-shadow: 0px 2px 3px 1px #aaa;
-		-moz-box-shadow: 0px 2px 3px 1px #aaa;
+	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
+		-webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
+		-moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
 }
 
 .about-title {
@@ -576,30 +591,13 @@ border-radius: 20px;
 	position: relative;
 	display: inline-block;
 	background: none;
-	padding: 10px 20px 0;
+	padding: 10px 30px 0;
+	vertical-align: top;
+	margin: 10px 0;
 }
 
-.imgDesc {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	visibility: hidden;
-	margin-top: 25%;
-	padding: 0 25px;
-}
-
-
-.wrap:hover .imgDesc {
-	visibility: visible;
-	opacity: 1;
-}
-
-span {
-	color: #222;
+#web-design span {
+	color: #888;
 }
 
 
@@ -611,9 +609,9 @@ span {
 }
 
 #contact-bkg {
-	box-shadow: 0px 0px 35px 20px #ddd inset; /*horiz offset, vertical offset, blur, spread*/
-		-webkit-box-shadow: 0px 0px 35px 20px #ddd inset;
-		-moz-box-shadow: 0px 0px 35px 20px #ddd inset;
+	box-shadow: 0px 0px 45px 15px #ddd inset; /*horiz offset, vertical offset, blur, spread*/
+		-webkit-box-shadow: 0px 0px 45px 15px #bfbfbf inset;
+		-moz-box-shadow: 0px 0px 45px 15px #bfbfbf inset;
 }
 
 .contact-h1 {
@@ -621,7 +619,7 @@ span {
 }
 
 #contact {
-	max-width: 70%;
+	max-width: 50%;
 	margin: 0 auto;
 }
 
@@ -640,21 +638,135 @@ span {
 
 @media (min-width: 1024px) {
 
+/********************* HEADER 1024PX *********************/
+
+.logo {
+	content: url("tablet-logo.png");
+	padding: 0;
+	height: 100%;
+	width: 400px;
+	margin: 75px 50px;
+}
+
+#nav-bkg {
+	height: 700px;
+	padding-top: 0;
+}
+
+.welcome {
+	display: none;
+}
+
+.welcome2 {
+	display: block;
+	height: 350px;
+	margin: 125px auto;
+}
+
+.main-nav {
+	display: flex;
+	flex-flow: row wrap;
+	padding: 0;
+	margin: 0 auto;
+	justify-content: center;
+	height: 80px;
+	width: 100%;
+	background: #ede5d9;
+	box-shadow: 0px 2px 5px rgba(189, 154, 95, 0.4); /*horiz offset, vertical offset, blur, spread*/
+		-webkit-box-shadow: 0px 2px 5px rgba(189, 154, 95, 0.4);
+		-moz-box-shadow: 0px 2px 5px rgba(189, 154, 95, 0.4);
+}
+
+.main-nav a {
+	margin: 0 auto;
+}
+
+.main-nav li {
+	margin: 0 30px;
+}
+
+.main-nav a:hover:after {
+	cursor: pointer;
+	position: relative;
+	content: url("hover_image.png");
+	top: -15px;
+	width: 100%;
+}
+
+.arrow {
+	display: none;
+}
 
 .h2-heading {
 	margin-left: 160px;
 }
 
-#web-design,
-#lightGallery {
-	margin-left: 10%;
-	margin-right: 10%;
-	padding: 15px 15px;
-	border-radius: 20px;
-		-webkit-border-radius: 20px;
-		-moz-border-radius: 20px;
+
+
+/********************* ABOUT 1024PX *********************/
+
+#about {
+	margin: 5% 10%;
 }
 
+#about p {
+	padding-right: 0;
+}
+
+
+
+/********************* WORK 1024PX *********************/
+
+#web-design,
+#lightGallery {
+	margin: 3% 7%;
+}
+
+#web-design img {
+	margin: 0;
+}
+
+.wrap {
+	width: 25%;
+	padding: 0;
+	margin: 25px;
+	position: relative;
+}
+
+.overlay {
+	position: absolute;
+	bottom: 100%;
+	left: 0;
+	right: 0;
+	background-color: #9ba197;
+	overflow: hidden;
+	width: 100%;
+	height:0;
+	transition: .5s ease;
+	border-radius: 5px;
+		-webkit-border-radius: 5px;
+		-moz-border-radius: 5px;
+}
+
+.wrap:hover .overlay {
+  bottom: 0;
+  height: 100%;
+}
+
+.imgDesc {
+	font-size: 1em;
+	position: absolute;
+	overflow: hidden;
+	top: 42%;
+	left: 50%;
+	width: 80%;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+}
+
+#web-design span {
+	color: #eee;
+}
 
 
 
