--- a/css/styles.css
+++ b/css/styles.css
@@ -694,9 +694,9 @@ body {
 	display: flex;
 	flex-flow: row wrap;
 	padding: 0;
-	margin: 0 auto -80px;
+	margin: 0 auto -70px;
 	justify-content: center;
-	height: 80px;
+	height: 70px;
 	width: 100%;
 	background: #49553f;
 	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4); /*horiz offset, vertical offset, blur, spread*/
@@ -711,6 +711,7 @@ body {
 
 .main-nav li {
 	margin: 0 30px;
+	padding-top: 19px;
 }
 
 .main-nav a:hover:after {
